@@ -1,6 +1,7 @@
 0.4.0
 -----
 
+* ColumnType.create_column renamed _create_column. (#118)
 * Pearson correlation implemented. (#103)
 
 0.3.0
